apps/contextsuite/overlays/staging/contextsuite-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["192.168.50.125","192.168.50.159","192.168.50.66"],"port":443,"protocol":"HTTPS","serviceName":"contextsuite:contextsuite","ingressName":"contextsuite:contextsuite","hostname":"contextsuite.ai","path":"/","allNodes":false}]
  name: contextsuite
  namespace: contextsuite
spec:
  rules:
    - host: contextsuite.ai
      http:
        paths:
          - backend:
              service:
                name: contextsuite
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - contextsuite.ai
      secretName: wild-contextsuite-ai-cert
